--- a/.env
+++ b/.env
@@ -28,3 +28,7 @@ APP_SECRET=7ce71394b76260c2a03a91c82f878f22
 DATABASE_URL="mysql://root:12345@127.0.0.1:3306/symfonylng?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
