--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/migrations": "3.1.3",
         "doctrine/orm": "2.7.5",
         "jms/serializer-bundle": "3.4.0",
+        "nelmio/cors-bundle": "1.5.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -21,7 +22,6 @@
         "symfony/maker-bundle": "^1.24",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
-        "symfony/serializer": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
