--- a/src/Resources/config/serializer/Entity.Publisher.yaml
+++ b/src/Resources/config/serializer/Entity.Publisher.yaml
@@ -4,7 +4,7 @@ App\Entity\Publisher:
     id:
       expose: true
       type: integer
-      group: ['Show', 'List']
+      group: ['List']
     name:
       expose: true
       type: string
