--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/maker-bundle": "^1.24",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
+        "symfony/security-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
