--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,10 @@ security:
     encoders:
         App\Entity\User:
             algorithm: auto
+        
+    role_hierarchy:
+        ROLE_ADMIN:         ROLE_USER
+        ROLE_SUPER_ADMIN:   ROLE_ADMIN
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -9,9 +13,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Account
-                property: email
-        custom_user_provider:
-          id: App\Security\AccountProvider
+        
           
     firewalls:
         dev:
@@ -34,5 +36,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
