Still trying to work with the account

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,44 +1,25 @@
 security:
     encoders:
-        App\Entity\User:
+        App\Entity\Account:
             algorithm: auto
-        
-    role_hierarchy:
-        ROLE_ADMIN:         ROLE_USER
-        ROLE_SUPER_ADMIN:   ROLE_ADMIN
-
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        app_account_provider:
             entity:
-                class: App\Entity\Account
-        
-          
+                class: 'App\Provider\AccountProvider'
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: app_user_provider
-            logout: ~
+            anonymous: ~
+            provider: app_account_provider
+            pattern: '^/service/v1/'
+            security: false
+            stateless: true
             guard:
                 authenticators:
-                    - App\Security\TokenAuthenticatorSecurity
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+                    - App\Security\TokenAuthenticatorSecurity       
     access_control:
-        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/service/v1/oauth2, methods: [POST], roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/service/v1/oauth2,  methods: [GET, DELETE], roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/service/v1/, roles: IS_AUTHENTICATED_FULLY }
