--- a/src/Resources/config/serializer/Model.Oauth2Request.yaml
+++ b/src/Resources/config/serializer/Model.Oauth2Request.yaml
@@ -1,15 +1,15 @@
-App\Model\Oauth2:
+App\Model\Oauth2Request:
   exclusion_policy: All
   properties:
     username:
       expose: true
       type: string
-      group: ['Create', 'Show']
+      group: ["Create", "Show"]
     password:
       expose: true
       type: string
-      group: ['Create', 'Show']
+      group: ["Create", "Show"]
     grantType:
       expose: true
       type: string
-      group: ['Create', 'Show']
+      group: ["Create", "Show"]
