--- a/src/Resources/config/serializer/Entity.Book.yaml
+++ b/src/Resources/config/serializer/Entity.Book.yaml
@@ -4,24 +4,24 @@ App\Entity\Book:
     id:
       expose: true
       type: integer
-      group: ['List']
+      group: ["List"]
     title:
       expose: true
       type: string
-      group: ['Show', 'List', 'Create']
+      group: ["Show", "List", "Create"]
     author:
       expose: true
       type: string
-      group: ['Show', 'List', 'Create']
+      group: ["Show", "List", "Create"]
     quantityPages:
       expose: true
       type: integer
-      group: ['Show', 'List', 'Create']
+      group: ["Show", "List", "Create"]
     releaseDate:
       expose: true
       type: datetime
-      group: ['Show', 'List', 'Create']
+      group: ["Show", "List", "Create"]
     publishingCompany:
       expose: true
       type: App\Entity\Publisher
-      group: ['Show', 'List']
+      group: ["Show", "List"]
