--- a/src/Resources/config/serializer/Entity.Book.yaml
+++ b/src/Resources/config/serializer/Entity.Book.yaml
@@ -19,7 +19,7 @@ App\Entity\Book:
       group: ["Show", "List", "Create"]
     releaseDate:
       expose: true
-      type: integer
+      type: string
       group: ["Show", "List", "Create"]
     publisher:
       expose: true
