--- a/src/Resources/config/serializer/Entity.Publisher.yml
+++ b/src/Resources/config/serializer/Entity.Publisher.yml
@@ -1,11 +1,11 @@
 App\Entity\Publisher:
-  exclusion_policy: All
+  exclusion_policy: ALL
   properties:
     id:
       expose: true
       type: integer
-      group: ["List"]
+      groups: [ 'List' ]
     name:
       expose: true
       type: string
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
