--- a/src/Resources/config/serializer/Entity.Account.yml
+++ b/src/Resources/config/serializer/Entity.Account.yml
@@ -1,38 +1,38 @@
 App\Entity\Account:
-  exclusion_policy: All
+  exclusion_policy: ALL
   properties:
     id:
       expose: true
       type: integer
-      group: ["List"]
+      groups: [ 'List' ]
     name:
       expose: true
       type: string
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
     email:
       expose: true
       type: string
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
     password:
       expose: true
       type: string
     plainPassword:
       expose: true
       type: string
-      group: ["Create"]
+      groups: [ 'Create' ]
     scope:
       expose: true
       type: string
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
     type:
       expose: true
       type: string
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
     createdAt:
       expose: true
       type: datetimeinterface
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
     modifiedAt:
       expose: true
       type: datetimeinterface
-      group: ["Show", "List", "Create"]
+      groups: [ 'Show', 'List', 'Create' ]
