--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -13,10 +13,10 @@ nelmio_cors:
     '^/v1/':
       allow_origin: [ '*' ]
       allow_headers: [ 'X-Custom-Auth','Content-Type', 'Authorization','Cache-Control','Access-Control', 'X-Requested-With' ]
-      allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'DELETE' ]
+      allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
       max_age: 3600
     '^/service/v1/':
       allow_origin: [ '*' ]
       allow_headers: [ 'X-Custom-Auth','Content-Type', 'Authorization','Cache-Control','Access-Control', 'X-Requested-With' ]
-      allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'DELETE' ]
+      allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
       max_age: 3600
