Problem in rounting by directory

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,13 +1,4 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
-
-book_list:
-  path:       /service/v1/book
-  controller: App\Controller\BookController::listAction
-  methods:    GET
-
-book_show:
-  path:       /service/v1/book/{id}
-  controller: App\Controller\BookController::showAction
-  methods:    GET
+routes_service_v1:
+  # loads routes in that directory
+  resource: 'routes/service/v1/'
+  type: directory
