--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,4 +32,4 @@ services:
 
     App\EventListener\DoctrineEventListener:
         tags:
-            - { name: 'doctrine.event_subscriber', connection: 'default' }
+            - { name: 'doctrine.event_subscriber' }
