--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,7 @@ security:
             anonymous: ~
             provider: app_account_provider
             pattern: '^/service/v1/'
-            security: false
+            security: true
             stateless: true
             guard:
                 authenticators:
@@ -22,7 +22,8 @@ security:
     access_control:
         - { path: ^/service/v1/oauth2, methods: [POST], roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/service/v1/oauth2, methods: [GET, DELETE], roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/service/v1/book, methods: [POST, PUT, DELETE], roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/service/v1/publisher, methods: [POST, PUT, DELETE], roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/service/v1/account, methods: [POST], roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/service/v1/book, methods: [GET], roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/service/v1/publisher, methods: [GET], roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/service/v1/, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/v1/, roles: IS_AUTHENTICATED_FULLY }
