--- a/src/Resources/config/serializer/Model.OAuth2Request.yml
+++ b/src/Resources/config/serializer/Model.OAuth2Request.yml
@@ -13,3 +13,7 @@ App\Model\OAuth2Request:
       expose: true
       type: string
       groups: [ 'Show', 'Create' ]
+    refreshToken:
+      expose: true
+      type: string
+      groups: [ 'Show', 'Create' ]
