--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,7 +23,8 @@ security:
         - { path: ^/service/v1/oauth2, methods: [POST], roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/service/v1/oauth2, methods: [GET, DELETE], roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/service/v1/account, methods: [POST], roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/service/v1/account/meta/enabled, methods: [PATCH], roles: ROLE_USER }
         - { path: ^/service/v1/book, methods: [GET], roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/service/v1/publisher, methods: [GET], roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/service/v1/, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/service/v1/, roles: ROLE_ADMIN }
         - { path: ^/v1/, roles: IS_AUTHENTICATED_FULLY }
