--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,6 +30,10 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    App\EventListener\DoctrineEventListener:
+        tags:
+            - { name: doctrine.event_subscriber }
+
     App\Listener\ExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
